Fixes styling issue for home page on smaller screen sizes

--- a/src/layouts/landing.module.css
+++ b/src/layouts/landing.module.css
@@ -1,7 +1,10 @@
 .Hero {
-  margin-top: calc(
-    var(--header-height) * -1
-  ); /* one can't have a negative CSS custom property, so this works. Credit to: https://github.com/css-modules/postcss-icss-values/issues/64#issuecomment-241285628 */
+  margin-top: calc(var(--header-height) * -1);
+  padding-top: var(--header-height);
+
+  @media (min-width: 800px) {
+    padding-top: 0;
+  }
 }
 
 @media (min-width: 800px) {
@@ -11,8 +14,6 @@
   }
 
   .Sidebar.Sidebar {
-    margin-top: calc(
-      var(--header-height) * -1
-    ); /* one can't have a negative CSS custom property, so this works. Credit to: https://github.com/css-modules/postcss-icss-values/issues/64#issuecomment-241285628 */
+    margin-top: calc(var(--header-height) * -1);
   }
 }
