--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,7 +46,6 @@ h5,
 h6 {
   font-family: var(--font-family-primary);
   font-weight: 700;
-  line-height: 1.33;
   margin: 0;
 }
 
